<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesActivity">

    <Button
        android:id="@+id/notes_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="toMainActivity"
        android:text="@string/home_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notes_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:text="@string/upcoming_tasks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/notes_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/notes_textview" />

    <ScrollView
        android:id="@+id/notes_scrollview"
        android:layout_width="408dp"
        android:layout_height="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_divider">


        <HorizontalScrollView
            android:id="@+id/note_horiscrll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/notes_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>


    </ScrollView>

    <View
        android:id="@+id/notes_divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/notes_scrollview"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/notes_add_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:onClick="toAddNoteActivity"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_scrollview" />

    <Button
        android:id="@+id/notes_edit_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:onClick="toEditNoteActivity"
        android:text="@string/edit"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/notes_delete_button"
        app:layout_constraintStart_toEndOf="@+id/notes_add_button"
        app:layout_constraintTop_toBottomOf="@+id/notes_scrollview" />

    <Button
        android:id="@+id/notes_delete_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:onClick="deleteNote"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/notes_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes_scrollview" />

    <Button
        android:id="@+id/notes_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="openViewDialog"
        android:text="@string/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>