...
        android:onClick="cancelPressed"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_note_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:onClick="toMainActivity"
        android:text="@string/update_note"
...
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/edit_note_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_note_name_textview" />

    <Button
        android:id="@+id/edit_note_date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_note_name_textview"
        app:layout_constraintTop_toBottomOf="@+id/edit_note_date2" />

    <EditText
        android:id="@+id/edit_note_description_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_note_description"
...
